# mandelbot

./: .gitignore  .mcp.json  .qmlls.ini  CLAUDE.md  COPYRIGHT  Cargo.toml  README.md  build.rs  dist-workspace.toml
.claude/: settings.local.json
.claude/skills/test-mandelbot-headless/: SKILL.md
.github/workflows/: bundle-linux-deb.yml  bundle-macos.yml
assets/: mandelbot.desktop
assets/icons/: logo-32x32.rgba  logo.icns
channel/: mandelbot-channel.ts  package-lock.json  package.json
demo/: README.md  time-travel-demo.sh
docs/superpowers/specs/: 2026-06-05-native-folder-dialog-design.md
examples/: ask-claude.json  headless-demo.json  rfd_spike.rs
qml/: main.qml
scripts/: bundle-linux-deb.sh  bundle-macos.sh  generate-icns.sh  install-desktop.sh
src/: animation.rs  channel.rs  checkpoint.rs  checkpoint_store.rs  config.rs  effect.rs  escape.rs  headless.rs  host.rs  keys.rs  links.rs  main.rs  markdown.rs  mcp.rs  pty.rs  router.rs  tabs.rs  terminal.rs  theme.rs  toast.rs  ui.rs  worktree.rs
src/agent/: mod.rs
src/agents/: HOME_PROMPT.md  PROJECT_PROMPT.md  PROMPT.md  PROMPT_worktree.md
src/agents/skills/_shared/: child.template.md  coord.md  index.template.md  watch.sh
src/config/: mod.rs
src/pty/: mod.rs
src/tab/: config.rs  events.rs  grid.rs  mod.rs  stream.rs
src/terminal/: mod.rs
src/ui/: checkpoint.rs  mod.rs  tabs.rs  timeline.rs  toast.rs  window.rs
src/ui/handlers/: checkpoint.rs  common.rs  mod.rs  tabs.rs  timeline.rs  toast.rs  window.rs
src/widget/: box_char.rs  cell.rs  divider.rs  fold_placeholder.rs  keybindings.rs  mod.rs  plan_review.rs  tab_bar.rs  terminal.rs  text_decorations.rs  timeline.rs  toast.rs
tests/: headless.rs
(+23 files in other folders)
