[package]
name = "mandelbot"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
alacritty_terminal = { version = "0.26.0-rc1", default-features = false }
iced = { version = "0.14", features = ["advanced"] }
portable-pty = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "io-std", "time", "process"] }
